# Distributed-server-client-under-infiniband-connection

./: .gitignore  CMakeLists.txt  README.md  makefile
http-server/: nweb.c  nweb.h
infiniband-connection/: client.c  client.h  dkv_client.c  dkv_client.h  establishment.c  establishment.h  kv_client.c  kv_client.h  server.c  server.h
utils/: helper.c  helper.h  memoryCache.c  memoryCache.h  memoryPool.c  memoryPool.h
